# anibot

./: .gitignore  README.md  SETUP.md  alembic.ini  env.example  kodik_api_documentation.md  kodik_reserach.md  mypy.ini  pyproject.toml  usergen.session
app/: config.py  main.py
app/bot/keyboards/: common.py
app/bot/routers/: __init__.py  search.py
app/common/: async_utils.py  logging.py
app/db/: models.py  repo.py  session.py
app/integrations/: kodik.py  telegram_uploader.py
app/services/: downloader.py  ingest.py  normalizer.py  search.py
app/workers/: delta_sync.py  ingest_full.py  upload_worker.py
migrations/: README  env.py
migrations/versions/: 0001_initial.py  0002_add_indexes.py  0003_schema_improvements.py
scripts/: check_setup.py  check_telegram.py  ci.sh  start_all.sh  test_proxy.py
tests/: test_async_utils.py  test_normalizer.py
